ghc-4335c07/testsuite/tests/dependent/should_compile/Dep1.hs
{-# LANGUAGE TypeInType #-}

module Dep1 where

import Data.Kind

data Proxy k (a :: k) = P

x :: Proxy * Int
x = P

y :: Proxy Bool True
y = P
